# ygo-combo-pipeline

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LOCAL_ONLY_NO_GITHUB.txt  PC_PORT_MANIFEST.md  README.md  audit_effect_coverage.py  audit_modeling_status.py  card_tags.jsonl  cb_fiendsmith_results.json  deep_results.json  diagnostic_02_results.json  generate_spot_check_report.py  make_handoff.sh  populate_fiendsmith_card_library.py  pyproject.toml  requirements.txt  suggest_card_tags.py  tag_review_report.md  tag_review_report.py  validate_card_tags.py  ygo_combo_pipeline_handoff_2026-01-20.md  ygo_combo_pipeline_handoff_2026-01-21_cdbmeta_unblocked.md  ygo_combo_pipeline_handoff_2026-01-23_lua_gt_hooks.md  ygo_combo_pipeline_up_to_date_2026-01-20.md  yu-gi-oh-analysis-pipeline-rules-standards.md
config/: card_roles.json  card_tags_schema.json  cb_fiendsmith_deck_validated.json  cb_fiendsmith_library.json  cb_fiendsmith_roles.json  cdb_aliases.json  constants.json  endboard_piece_buckets.json  evaluation_config.json  gold_standard_combo.json  locked_library.json  lua_ground_truth_cases.json  pending_verifications.json  verified_cards.json  verified_effects.json
decklists/: fiendsmith_v1.ydk  fiendsmith_v2.ydk  library.ydk
docs/: CB_FIENDSMITH_SETUP_GUIDE.md  CFFI_PROTOTYPE_PLAN.md  COMBO_PIPELINE_ROADMAP.md  EFFECT_VERIFICATION_CHECKLIST.md  FULL_LIBRARY_AUDIT.md  HANDOFF_COMBO_ENUMERATION.md  HANDOFF_ENUMERATION_INVESTIGATION.md  ISSUES_AND_FIXES.md  MINIMAL_ENGRAVER_TEST_PLAN.md  NEW_CARD_PROTOCOL.md  PIPELINE_AUDIT.md  PROJECT_INVENTORY.md  (+9 more)
(+602 files in other folders)
